--- a/css/chat.css
+++ b/css/chat.css
@@ -72,6 +72,7 @@
 .list-message .message.message-mine{
     display: flex;
     justify-content: flex-end;
+    margin-bottom: 10px;
 }
 
 .list-message .message.message-mine .message-content{
