--- a/css/chat.css
+++ b/css/chat.css
@@ -2,18 +2,6 @@
     height: 100vh;
 }
 
-.chat-container .header{
-    color: #fff;
-    background: #037BFE;
-    height: 64px;
-    /* text-align: center;
-    line-height: 64px; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 24px;
-}
-
 .chat-container .conversation-title{
     color: #000;
     background: #fff;
@@ -58,7 +46,13 @@
 }
 
 .chat-container .main{
+    display: flex;
     height: calc(100vh - 64px);
+}
+
+.chat-container .conversation-detail{
+    height: 100%;
+    width: 85%;
 }
 
 .list-message .message .message-content{
@@ -78,4 +72,31 @@
 .list-message .message.message-mine .message-content{
     color: #fff;
     background-color: #837BFE;
+    word-break: break-all;
+}
+
+.list-messages{
+    padding: 10px;
+}
+
+.chat-container .aside-left{
+    width: 15%;
+    height: 100%;
+    border-right: 1px solid #dbdbdb;
+}
+
+.chat-container .aside-left .create-conversation{
+    height: 64px;
+    line-height: 64px;
+    text-align: center;
+    border-bottom: 1px solid #dbdbdb;
+}
+
+.chat-container .aside-left .conversation{
+    padding: 10px;
+    cursor: pointer;
+}
+
+.chat-container .conversation.current{
+    background-color: #dbdbdb;
 }
