--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,24 @@
 .err{
     color: red;
 }
+
+.header{
+    color: #fff;
+    background: #037BFE;
+    height: 64px;
+    /* text-align: center;
+    line-height: 64px; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+}
+
+.mb-1{
+    margin-bottom: 1rem;
+}
+
+.btn-light{
+    background-color: #fafafa;
+    color: black;
+}
